tests/NormalTests/paczka1/small_fuzzy/18155248.err
Error in line 3: GqNs6L8G7 S187 56,7
Error in line 5: GqNs6L8G7 A833 73,0
